[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Matjah Sonneveld <matjah.sonneveld@blueconic.com>"]
readme = "README.md"
packages = [{include = "web_scraper"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
